src/snapshots/gfroerli_bot_threema__handler__tests__format_about_text__without_maintainers.snap
---
source: src/handler.rs
expression: "format_about_text(&[])"
---
Gfrörli is a community project that measures water temperatures in Swiss water bodies.

Website: https://gfrör.li/

This bot allows you to quickly check current water temperatures directly from your phone. Use */sensors* to see all available measurement stations, or */temp* to get the latest reading for a specific sensor.

You can also download our mobile apps to view sensor details on the go: On iOS, download it from the App Store, on Android, download it from Google Play or Accrescent.
